{
    "name": "PlayerInputContoller",
    "maps": [
        {
            "name": "Player",
            "id": "49e75ab7-2c93-4485-9ce7-5e809ba271b6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "bf32e5fb-2b4f-4f82-b5f9-5d981f5a6a2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "15ddcbba-78ca-43b6-9200-956fc2ae9c57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SingleShot",
                    "type": "Button",
                    "id": "b7a208e1-02f6-4130-b369-c1b4e96b54f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BurstShot",
                    "type": "Button",
                    "id": "c15e0580-1116-42cc-b5f8-be750efa5dc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ContinuousShot",
                    "type": "Button",
                    "id": "5d6af001-b9b5-4492-a7bb-2820fec28651",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ActivateStones",
                    "type": "Button",
                    "id": "b8321006-b31d-449b-9193-d290062f3ac9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectGun",
                    "type": "Button",
                    "id": "816ec301-b3a1-441e-bf0d-89df4ad518e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5186560a-1a17-4743-b160-36759bbf5f06",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Move",
                    "id": "7233ab68-c3fd-44c4-bde5-c541ebd7326b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "441daf43-7127-4c7b-b7bd-e9fdfada9382",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bcf29bc9-e0c9-41cd-aaed-d9163d161174",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "178f2198-be2e-4f4b-9f5f-7b16ca4d6d8c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6fdb0c83-88d5-4cf2-8f6d-8d32dae10b69",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1bfd5161-a1ab-47b1-8409-b526b8e4e634",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "SingleShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a028d82f-b390-4bd1-8678-28afdab23a0d",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "BurstShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c720aabc-853e-4e54-9262-5d7ebcc98659",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "BurstShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "287bc26b-a766-430f-a93e-9ba36836c51d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.3)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "ContinuousShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "871c85a9-5435-41a8-95d0-2dcd17864405",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "ActivateStones",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19cb575a-5cbd-42bb-b4d5-492590ce804f",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "SelectGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}